# project-graph

./: eslint.config.js
.claude/skills/gh-ci-monitor/: SKILL.md
.github/scripts/: disable-tauri-updater.mjs
.github/workflows/: build.yml
app/src/: DropWindowCover.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs
app/src-tauri/src/cmd/: mod.rs
app/src/components/: render-sub-windows.tsx  theme-mode-switch.tsx
app/src/core/: Tab.tsx
app/src/core/render/canvas2d/entityRenderer/edge/concrete/: StraightEdgeRenderer.tsx  VerticalPolyEdgeRenderer.tsx
app/src/core/service/: GlobalMenu.tsx  Settings.tsx  SettingsIcons.tsx
app/src/core/service/controlService/keyboardOnlyEngine/: selectChangeEngine.tsx
app/src/core/service/controlService/shortcutKeysEngine/: shortcutKeysRegister.tsx
app/src/core/service/dataGenerateService/autoComputeEngine/functions/: nodeLogic.tsx
app/src/core/service/dataGenerateService/stageExportEngine/: stageExportEngine.tsx
app/src/core/service/dataManageService/copyEngine/: copyEngineImage.tsx  copyEngineText.tsx
app/src/core/service/dataManageService/dragFileIntoStageEngine/: dragFileIntoStageEngine.tsx
app/src/core/stage/stageManager/basicMethods/: SectionMethods.tsx
app/src/core/stage/stageManager/concreteMethods/: StageNodeAdder.tsx
app/src/locales/: en.yml  id.yml  zh_CN.yml  zh_TW.yml  zh_TWC.yml
app/src/sub/: AIToolsWindow.tsx  GenerateNodeWindow.tsx  TextImportWindow.tsx
app/src/sub/SettingsWindow/: credits.tsx  index.tsx  settings.tsx
app/src/utils/: pathString.tsx
