[package]
name = "project-graph"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "project_graph_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[target.'cfg(target_os = "linux")'.build-dependencies]
cxx-qt-build = "0.7"

[dependencies]
tauri = { version = "2.11.0", features = ["macos-private-api", "image-png"] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.3.0"
tauri-plugin-http = { version = "2.5.9", features = ["unsafe-headers"] }
tauri-plugin-clipboard-manager = "2.3.0"
base64 = "0.22.1"
tauri-plugin-process = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-deep-link = "2"
regex = "1.12.3"

# OCR (PaddleOCR-VL via aha) is heavy: pulls in sentencepiece (native C++)
# and aha/candle which needs GPU on Linux. Gate it behind a feature so CI
# builds can skip it. Production releases should enable `--features ocr`.
aha = { version = "0.2.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
aha = { version = "0.2.6", features = ["metal"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
aha = { version = "0.2.6", optional = true }
cxx = "1.0.126"
cxx-qt = "0.7"
cxx-qt-lib = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
aha = { version = "0.2.6", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["rt"] }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[features]
# Enables OCR (PaddleOCR-VL via aha). Heavy: pulls in sentencepiece native C++.
# CI builds without this. Real releases enable with: cargo tauri build --features ocr
ocr = ["dep:aha"]
